# k9x-ecosystem

./: .gitignore  README.md  pull.sh  requirements.txt
deployment/: Dockerfile  build.sh  (+6 more)
k9x_studio/context/k9_aif_abb/: README.md  __init__.py  pyproject.toml
k9x_studio/context/k9_aif_abb/config/: README.md  __init__.py  config.yaml  example_squads.yaml  flows.yaml  flows_llm.yaml  governance.yaml  orchestrators.yaml  tools.yaml
k9x_studio/context/k9_aif_abb/db/: k9aif_db_schema.sql
k9x_studio/context/k9_aif_abb/k9_adapters/: __init__.py
k9x_studio/context/k9_aif_abb/k9_agents/: __init__.py
k9x_studio/context/k9_aif_abb/k9_core/: README.md  __init__.py  base_adapter.py  base_component.py  context.py
k9x_studio/context/k9_aif_abb/k9_data/: __init__.py  base_vectordb.py  vectordb_factory.py
k9x_studio/context/k9_aif_abb/k9_factories/: __init__.py  connector_factory.py  governance_factory.py  llm_factory.py  mcp_client_connection_factory.py  message_factory.py  model_router_factory.py  monitor_factory.py  orchestration_factory.py  persistence_factory.py  retriever_factory.py  router_factory.py  security_factory.py  streaming_factory.py
k9x_studio/context/k9_aif_abb/k9_governance/: __init__.py  profanity_governance.py
k9x_studio/context/k9_aif_abb/k9_inference/: README.md  __init__.py
k9x_studio/context/k9_aif_abb/k9_mcp/: __init__.py  mcp_inference_server.py
k9x_studio/context/k9_aif_abb/k9_monitoring/: README.md  __init__.py  cloudwatch_monitor.py  console_monitor.py  grafana_dashboard.json  monitor_server.py  otel_monitor.py  prometheus_monitor.py
(+219 files in other folders)
